Add downloading game states support